implement radioGroup set on chane listener

--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Female"
-            android:id="@+id/femaleRadioButton2"
+            android:id="@+id/femaleRadioButton"
             android:checked="false" />
     </RadioGroup>
 </RelativeLayout>
