--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,9 @@
         android:id="@+id/button"
         android:enabled="true"
         android:onClick="click"
-        android:layout_below="@+id/radioGroup"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -75,4 +75,12 @@
         android:id="@+id/listView"
         android:layout_below="@+id/button"
         android:layout_alignParentLeft="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/radioGroup" />
 </RelativeLayout>
