--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
         android:orientation="horizontal"
-        android:id="@+id/radioGroup">
+        android:id="@+id/radioGroup"
+        android:visibility="gone">
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -64,8 +65,7 @@
         android:text="Hide Sex"
         android:id="@+id/hideCheckBox"
         android:layout_alignBottom="@+id/button"
-        android:layout_toRightOf="@+id/button"
-        android:layout_toEndOf="@+id/button"
+        android:layout_toRightOf="@+id/button2"
         android:checked="false"
         android:enabled="false" />
 
@@ -83,4 +83,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/radioGroup" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button2"
+        android:layout_alignBottom="@+id/hideCheckBox"
+        android:layout_toRightOf="@+id/button"
+        android:onClick="goToMenu" />
 </RelativeLayout>
