mainActivity get the total Number From DrinkMenuActivity

--- a/SimpleUI/app/src/main/res/layout/listview_item.xml
+++ b/SimpleUI/app/src/main/res/layout/listview_item.xml
@@ -6,8 +6,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="drink name"
-        android:id="@+id/drinkName"
+        android:text="NTU Store"
+        android:id="@+id/store"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -18,16 +18,18 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="note"
         android:id="@+id/note"
-        android:layout_below="@+id/drinkName"
+        android:layout_below="@+id/store"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="store"
-        android:id="@+id/store"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="0"
+        android:id="@+id/drinkNumber"
         android:layout_alignBottom="@+id/note"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
