implement progress bar

--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -92,4 +92,11 @@
         android:layout_alignBottom="@+id/hideCheckBox"
         android:layout_toRightOf="@+id/button"
         android:onClick="goToMenu" />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
