--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:onClick="click"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/spinner" />
+        android:layout_below="@+id/imageView" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -62,12 +62,12 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hide Sex"
+        android:text="hide Photo"
         android:id="@+id/hideCheckBox"
         android:layout_alignBottom="@+id/button"
         android:layout_toRightOf="@+id/button2"
         android:checked="false"
-        android:enabled="false" />
+        android:enabled="true" />
 
     <ListView
         android:layout_width="match_parent"
@@ -87,7 +87,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="MENU"
         android:id="@+id/button2"
         android:layout_alignBottom="@+id/hideCheckBox"
         android:layout_toRightOf="@+id/button"
@@ -99,4 +99,12 @@
         android:id="@+id/progressBar"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_below="@+id/spinner"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
