get static google map image

--- a/SimpleUI/app/src/main/res/layout/activity_order_detail.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_order_detail.xml
@@ -50,7 +50,13 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/photoImageView" />
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/mapImageView" />
+
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
+
 </RelativeLayout>
