--- a/SimpleUI/app/src/main/res/layout/activity_order_detail.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_order_detail.xml
@@ -55,6 +55,12 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/mapImageView" />
 
+                <fragment
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:name="com.google.android.gms.maps.MapFragment"
+                    android:id="@+id/googleMapFragment" />
+
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
