--- a/SimpleUI/app/src/main/res/layout/activity_order_detail.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_order_detail.xml
@@ -15,7 +15,8 @@
         android:id="@+id/scrollView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" >
+        android:layout_alignParentStart="true"
+        android:fillViewport="false">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,7 +25,8 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:id="@+id/linearLayoutId">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -62,6 +64,13 @@
                     android:id="@+id/googleMapFragment" />
 
             </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView2"
+                android:layout_alignTop="@+id/linearLayoutId"
+                android:layout_alignBottom="@+id/linearLayoutId" />
         </RelativeLayout>
     </ScrollView>
 
